# moyu

./: .editorconfig  .env  .eslintrc.js  .gitattributes  .gitignore  .prettierrc.js  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  README_JP.md  biome.json  eslint.config.mjs  package.json  tsconfig.json
core/: Cargo.toml
core/src/: main.rs  node.rs  renderer.rs  sprite.rs  types.rs
core/src/shaders/: default.wgsl
core/src/swc/: mod.rs
core/src/v8/: mod.rs  state.rs  utils.rs
core/src/v8/internals/: mod.rs  timer.rs
core/src/v8/module/: callbacks.rs  import_module.rs  mod.rs  types.rs  utils.rs
crates/audio/: Cargo.toml
crates/audio/examples/: audio.rs
crates/audio/src/: audio.rs  kira_static_data.rs  lib.rs  manager.rs  opus_decoder.rs  symphonia.rs  utils.rs  wildcard.rs
crates/core/: Cargo.toml
crates/core/src/: core.rs  hai.rs  lib.rs  main.rs  resource.rs  state.rs  surface.rs  types.rs  user_event.rs
crates/core/src/base/: bound.rs  cursor.rs  mod.rs  mvp_matrix.rs  point.rs  rect.rs  snapshot.rs  surface_size.rs  transform.rs  vertex.rs
crates/core/src/core/: editable.rs  filter_registry.rs  global.rs  handle_events.rs  input_events.rs  keyboard_events.rs  pointer_events.rs  render.rs  render_command.rs  render_state.rs  texture_pool.rs
crates/core/src/events/: beforeunload.rs  custom.rs  focus.rs  fullscreen.rs  game.rs  keyboard.rs  mod.rs  mouse.rs  node.rs  raf.rs  resize.rs  touch.rs  wheel.rs
crates/core/src/nodes/: container.rs  mod.rs  node.rs  null_renderer.rs  sprite.rs  text.rs  texture.rs  video.rs  yuv_sprite.rs
crates/core/src/ops/: mod.rs  node.rs  system.rs
crates/core/src/plugins/: system.rs
crates/core/src/renderer/: mod.rs  sprite.rs  text.rs  yuv_sprite.rs
crates/core/src/traits/: command.rs  common.rs  editable_target.rs  event.rs  filter.rs  focusable.rs  mod.rs  node.rs  plugin.rs  renderable.rs  renderer.rs  update_props.rs
crates/core/src/utils/: calculate.rs  constants.rs  convert.rs  coordinates.rs  dispatch_event.rs  eval_in_sandbox.rs  fps_meter.rs  hit_test.rs  layout.rs  mod.rs  patch.rs  premultiply_alpha.rs  walk.rs
crates/doufu/: Cargo.toml  build.rs
crates/doufu/src/: entry.rs  lib.rs  main.rs
crates/gamepad/: Cargo.toml
crates/gamepad/src/: events.rs  gamepad.rs  lib.rs  plugin.rs  utils.rs
crates/hai/: Cargo.toml
crates/hai/src/: entry.rs  hai_lib.rs  main.rs
crates/js_runtime/: Cargo.toml
crates/js_runtime/src/: lib.rs  macros.rs  shared.rs  utils.rs
crates/js_runtime/src/internals/: console.rs  timer.rs
crates/js_runtime/src/module/: callbacks.rs  mod.rs  types.rs
crates/js_runtime/src/timer/: mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: bindgen.rs  lib.rs
crates/macros/src/bindgen/: quickjs.rs  v8.rs
crates/moyu/: Cargo.toml  build.rs
crates/moyu/src/: entry.rs  lib.rs  main.rs  splash.rs
crates/moyu/static/: res.rc
crates/nodes/: Cargo.toml
crates/nodes/src/: lib.rs  utils.rs
crates/nodes/src/events/: editable.rs  linear_layout.rs  mod.rs  shader.rs  text.rs  transition.rs  video.rs
crates/nodes/src/nodes/: animation.rs  backdrop.rs  clip.rs  editable.rs  filter.rs  linear_layout.rs  mod.rs  shader.rs  shader_slot.rs  sprite.rs  text.rs  transition_container.rs  transition_slot.rs  video.rs  yuv_sprite.rs
crates/nodes/src/renderer/: animation.rs  backdrop.rs  clip.rs  filter.rs  mod.rs  pass.rs  shader.rs  sprite.rs  text.rs  transition.rs  video.rs  yuv_sprite.rs
crates/ops/: Cargo.toml
crates/ops/src/: focus.rs  lib.rs  node.rs  spawn.rs  system.rs
crates/platform/: Cargo.toml
crates/platform/src/: config.rs  dir.rs  env.rs  fs.rs  lib.rs  logger.rs  platform.rs  sync.rs  task.rs  time.rs  url.rs  visible_hand.rs
crates/platform/src/config/: backend.rs  logical_size.rs  present_mode.rs
crates/platform/src/env/: logical_size.rs  present_mode.rs
crates/platform/src/fs/: appdata_common.rs  appdata_native.rs  appdata_web.rs  open.rs  read.rs
crates/platform/src/platform/: android.rs
crates/platform/src/symphonia/: mod.rs  (+1 more)
crates/quick_runtime/: Cargo.toml
crates/quick_runtime/examples/: simple.rs
crates/quick_runtime/src/: console.rs  lib.rs  module.rs  vm.rs
crates/resource/: Cargo.toml
crates/resource/src/: lib.rs  mipmap.rs  mipmap.wgsl
crates/run_wasm/: Cargo.toml
crates/run_wasm/src/: core.rs  index.template.html
crates/runtime/: Cargo.toml
crates/runtime/examples/: dom.client.js  echo.client.js  echo.server.js  eval.client.js  fetch.client.js  simple.rs
crates/runtime/src/: console.rs  http.rs  lib.rs  module.rs  ops.rs  vm.rs  websocket.rs
crates/scenario/: Cargo.toml
crates/scenario/src/: commands.rs  events.rs  execution_path.rs  executor.rs  lib.rs  replace_recovery.rs  state.rs  story_graph.rs  types.rs  utils.rs
crates/steam/: Cargo.toml
crates/steam/src/: commands.rs  lib.rs
crates/video/: Cargo.toml
crates/video/src/: audio_output.rs  audio_playback.rs  demuxer.rs  lib.rs  player.rs  types.rs
hai_core/: Cargo.toml
hai_core/src/: container.rs  core.rs  hai.rs  main.rs  node.rs  renderer.rs  resource.rs  sprite.rs  state.rs  surface.rs  texture.rs  types.rs  user_event.rs  web.rs
hai_core/src/nodes/: container.rs  mod.rs  sprite.rs  texture.rs  video.rs
hai_core/src/ops/: mod.rs  node.rs  system.rs
hai_core/src/presets/: default.rs
hai_core/src/renderer/: init.rs  input.rs  mod.rs  null.rs  render.rs  sprite.rs  update.rs  walk.rs
hai_core/src/traits/: focusable.rs  mod.rs  node.rs  renderable.rs  renderer.rs  update_props.rs
hai_core/src/utils/: constants.rs  convert.rs  mod.rs  walk.rs
hai_core/src/v8/: macros.rs  mod.rs
hai_js_runtime/: Cargo.toml
hai_js_runtime/src/: lib.rs  macros.rs  prelude.rs  shared.rs
hai_js_runtime/src/internals/: timer.rs
hai_js_runtime/src/module/: callbacks.rs  mod.rs  types.rs  utils.rs
hai_js_runtime/src/timer/: mod.rs
hai_module_compiler/: Cargo.toml
hai_module_compiler/src/: lib.rs
hai_pal/: Cargo.toml
hai_pal/src/: env.rs  fs.rs  lib.rs  logger.rs  platform.rs  sync.rs  url.rs
(+96 files in other folders)
