[workspace]
default-members = ["crates/moyu"]
members = [
  "crates/moyu",
  "crates/core",
  "crates/resource",
  "crates/runtime",
  "crates/platform",
  "crates/macros",
  "crates/run_wasm",
  "crates/nodes",
  "crates/ops",
  "crates/audio",
  "crates/scenario",
  "crates/gamepad",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.6"
bytemuck = {version = "1.24", features = ["derive"]}
cfg_aliases = "0.2.1"
csscolorparser = {version = "0.7", features = ["serde"]}
dashmap = "6.1.0"
glam = {version = "0.30", features = ["bytemuck"]}
huozi = "0.13"
image = {version = "0.25", default-features = false, features = ["rayon", "bmp", "jpeg", "png", "webp"]}
log = "0.4"
quickjs-rusty = "0.9.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sixu = {version = "0.2", features = ["serde"]}
tokio = "1"
wasm-bindgen = {version = "0.2", default-features = false}
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wgpu = {version = "27.0", features = ["fragile-send-sync-non-atomic-wasm", "webgl"]}
winit = "0.29"

opus = {version = "0.3", git = "https://github.com/Icemic/opus-rs", branch = "dev"}

moyu_audio = {path = "crates/audio"}
moyu_core = {path = "crates/core"}
moyu_gamepad = {path = "crates/gamepad"}
moyu_macros = {path = "crates/macros"}
moyu_nodes = {path = "crates/nodes"}
moyu_ops = {path = "crates/ops"}
moyu_pal = {path = "crates/platform"}
moyu_resource = {path = "crates/resource"}
moyu_runtime = {path = "crates/runtime"}
moyu_scenario = {path = "crates/scenario"}

[patch.crates-io]
# huozi = {path = "../huozi-rs"}
# quickjs-rusty = {path = "../quickjs-rusty"}
# sixu = {path = "../sixu/sixu"}
