[package]
edition = "2021"
name = "hai-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}
cgmath = "0.18"
env_logger = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
swc = "0.122"
swc_ecma_parser = "0.88"
v8 = "0.39"
wgpu = "0.12"
winit = "0.26"
