[package]
edition = "2021"
name = "hai_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]
desktop = ["hai_js_runtime"]
web = ["wgpu/webgl"]

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}
cgmath = "0.18"
dotenv = "0.15.0"
env_logger = "0.9"
futures = "0.3"
image = "0.23"
log = "0.4"
wgpu = "0.12"
winit = "0.26"

[dependencies.hai_js_runtime]
optional = true
path = "../hai_js_runtime"
version = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1", features = ["full"]}
