[package]
edition = "2021"
name = "hai_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
desktop = ["hai_js_runtime"]
web = ["wgpu/webgl"]

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}
cgmath = "0.18"
futures = "0.3"
image = "0.23"
log = "0.4"
wgpu = "0.12"
winit = "0.26"

[dependencies.hai_js_runtime]
optional = true
path = "../hai_js_runtime"
version = "0.1"

[dependencies.hai_pal]
path = "../hai_pal"
version = "0.1"

# deps for desktop platforms
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1", features = ["full"]}

# deps for web
[target.'cfg(target_arch = "wasm32")'.dependencies]
pollster = "0.2.5"
web-sys = "0.3.56"
