[package]
edition = "2021"
name = "hai_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]
desktop = ["hai_js_runtime"]
web = ["wgpu/webgl"]

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.12", features = ["derive"]}
cgmath = "0.18"
futures = "0.3"
image = "0.23"
log = "0.4"
once_cell = "1.16"
wgpu = "0.13"
winit = "0.27"

[dependencies.hai_js_runtime]
optional = true
path = "../hai_js_runtime"
version = "0.1"

[dependencies.hai_pal]
path = "../hai_pal"
version = "0.1"

[dependencies.hai_macros]
path = "../hai_macros"
version = "0.1"

# deps for desktop platforms
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1", features = ["full"]}

# deps for web
[target.'cfg(target_arch = "wasm32")'.dependencies]
pollster = "0.2.5"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.56"
