[package]
edition = "2021"
name = "hai_module_compiler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
swc = "0.215.0"
swc_common = "0.27.12"
swc_core = {version = "0.8.1", features = ["ast", "__common"]}
swc_ecma_parser = "0.117.6"
