[package]
edition = "2021"
name = "hai_pal"
version = "0.1.0"

[dependencies]
log = "0.4"

# deps for desktop platforms
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = "0.15.0"
env_logger = "0.9"

# deps for web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = {version = "0.2.0", features = ["color"]}
