[package]
edition = "2021"
name = "hai_pal"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
reqwest = {version = "0.11", features = ["rustls-tls", "gzip", "deflate", "stream", "brotli"]}
url = "2.2"

# deps for desktop platforms
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = "0.15.0"
env_logger = "0.9"
node-resolve = "2.2"
parking_lot = {version = "0.12", features = ["hardware-lock-elision"]}
tokio = {version = "1", features = ["full"]}

# deps for web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = {version = "0.2.0", features = ["color"]}
