[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Audio plugin for Moyu."
edition = "2021"
license = "MPL-2.0"
name = "moyu_audio"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[features]
default = []
desktop = []
web = []

[dependencies]
anyhow = "1.0"
kira = "0.10"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
arc-swap = "1.6"

[dependencies.moyu_pal]
path = "../platform"
version = "0.7"

[dependencies.moyu_core]
default-features = false
features = ["js_runtime"]
path = "../core"
version = "0.7"
