[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Audio plugin for Moyu."
edition = "2024"
license = "MPL-2.0"
name = "moyu_audio"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.8.0"

[features]
default = []
desktop = []
web = []

[dependencies]
kira = "0.10"
lazy_static = "1.5"
symphonia = {version = "0.5", default-features = false}
symphonia-core = {version = "0.5", default-features = false}

anyhow = {workspace = true}
log = {workspace = true}
opus = {workspace = true}
serde = {workspace = true}

moyu_core = {workspace = true, features = ["js_runtime"]}
moyu_macros = {workspace = true}
moyu_pal = {workspace = true}

[dev-dependencies]
arc-swap = {workspace = true}
