[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Audio plugin for Moyu."
edition = "2024"
license = "MPL-2.0"
name = "moyu_audio"
repository = "https://github.com/DeepSpaceMill/moyu"
version.workspace = true

[features]
default = []
desktop = []
web = []

[dependencies]
kira = "0.12"

anyhow = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
symphonia = {workspace = true}
ts-rs = {workspace = true}

moyu_core = {workspace = true, features = ["js_runtime"]}
moyu_macros = {workspace = true}
moyu_pal = {workspace = true}

[dev-dependencies]
arc-swap = {workspace = true}
