[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Core implementation of Hai game engine, and general 2D rendering library using WebGPU as well."
edition = "2021"
license = "MPL-2.0"
name = "hai_core"
repository = "https://github.com/Icemic/hai"
version = "0.7.0"

[features]
default = []
desktop = ["hai_pal/desktop", "dep:tokio", "quickjs", "hai_runtime"]
js_runtime = []
quickjs = ["hai_macros/quickjs"]
web = [
  "hai_pal/web",
  "wgpu/webgl",
  "dep:pollster",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]

[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
bytemuck = {version = "1.13", features = ["derive"]}
csscolorparser = {version = "0.6", features = ["serde"]}
cursor-icon = {version = "1", features = ["serde"]}
futures = "0.3"
glam = {version = "0.28", features = ["bytemuck"]}
image = {version = "0.25", default-features = false, features = [
  "rayon",
  "avif",
  "bmp",
  "jpeg",
  "png",
  "webp",
]}
log = "0.4"
once_cell = "1.16"
wgpu = "0.20"
winit = "0.29"

pollster = {version = "0.3.0", optional = true}
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = {version = "0.6.5", optional = true}
tokio = {version = "1", features = ["full"], optional = true}
wasm-bindgen = {version = "0.2.83", default-features = false, optional = true}
wasm-bindgen-futures = {version = "0.4", optional = true}
web-sys = {version = "0.3.56", features = ["Window", "Element", "Document", "HtmlElement", "HtmlCanvasElement"], optional = true}

[dependencies.hai_runtime]
optional = true
path = "../runtime"
version = "0.7"

[dependencies.hai_pal]
path = "../platform"
version = "0.7"

[dependencies.hai_macros]
default-features = false
path = "../macros"
version = "0.7"
