[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Core implementation of Moyu game engine, and general 2D rendering library using WebGPU as well."
edition = "2021"
license = "MPL-2.0"
name = "moyu_core"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[features]
default = []
js_runtime = ["moyu_runtime"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
bytemuck = {version = "1.13", features = ["derive"]}
csscolorparser = {version = "0.6", features = ["serde"]}
cursor-icon = {version = "1", features = ["serde"]}
glam = {version = "0.28", features = ["bytemuck"]}
image = {version = "0.25", default-features = false, features = [
  "rayon",
  "avif",
  "bmp",
  "jpeg",
  "png",
  "webp",
]}
log = "0.4"
rayon = "1.10"
serde = {version = "1.0", features = ["derive"]}
wgpu = "22.0"
winit = {version = "0.29", features = ["serde"]}

moyu_macros = {workspace = true}
moyu_pal = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moyu_runtime = {workspace = true, optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = {version = "0.2.83", default-features = false}
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3.56", features = ["Window", "Element", "Document", "HtmlElement", "HtmlCanvasElement"]}
wgpu = {version = "22.0", features = ["webgl"]}

[build-dependencies]
cfg_aliases = {workspace = true}
