[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Core implementation of Moyu game engine, and general 2D rendering library using WebGPU as well."
edition = "2021"
license = "MPL-2.0"
name = "moyu_core"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[features]
default = []
js_runtime = ["moyu_runtime"]

[dependencies]
cursor-icon = {version = "1", features = ["serde"]}

anyhow = {workspace = true}
arc-swap = {workspace = true}
bytemuck = {workspace = true}
csscolorparser = {workspace = true}
glam = {workspace = true}
image = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
wgpu = {workspace = true}
winit = {workspace = true, features = ["serde"]}

moyu_macros = {workspace = true}
moyu_pal = {workspace = true}
moyu_resource = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moyu_runtime = {workspace = true, optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"

wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
web-sys = {workspace = true, features = ["Window", "Element", "Document", "HtmlElement", "HtmlCanvasElement"]}

[build-dependencies]
cfg_aliases = {workspace = true}
