[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "An experimental game engine for building visual novels."
edition = "2021"
license = "MPL-2.0"
name = "doufu"
repository = "https://github.com/Icemic/doufu"
version = "0.7.0"

[package.metadata.release]
publish = false
release = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["text"]

text = ["doufu_nodes/text", "doufu_ops/text"]
video = ["doufu_nodes/video"]

[[bin]]
name = "doufu"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
name = "libdoufu"
path = "src/lib.rs"

[dependencies]
log = "0.4"
spin_sleep_util = "0.1.1"

doufu_audio = {workspace = true}
doufu_core = {workspace = true, features = ["js_runtime"]}
doufu_macros = {workspace = true}
doufu_nodes = {workspace = true}
doufu_ops = {workspace = true}
doufu_pal = {workspace = true}
doufu_scenario = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2.83", default-features = false}
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
winit = {version = "0.29", features = ["android-game-activity"]}

[build-dependencies]
cfg_aliases = {workspace = true}
