[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Gamepad plugin for Moyu."
edition = "2024"
license = "MPL-2.0"
name = "moyu_gamepad"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[dependencies]
anyhow = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}

moyu_macros = {workspace = true}

[target.'cfg(any(windows, target_os = "linux", target_os = "macos", target_arch = "wasm32"))'.dependencies]
gilrs = "0.11"

[dependencies.moyu_pal]
path = "../platform"
version = "0.7"

[dependencies.moyu_core]
default-features = false
features = ["js_runtime"]
path = "../core"
version = "0.7"

[build-dependencies]
cfg_aliases = {workspace = true}
