[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "An experimental game engine for building visual novels."
edition = "2021"
license = "Apache-2.0"
name = "hai"
repository = "https://github.com/Icemic/hai"
version = "0.1.1"

[package.metadata.release]
publish = false
release = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]
desktop = ["hai_core/desktop"]
video = ["hai_core/video"]
web = [
  "hai_core/web",
]

[dependencies]
log = "0.4"
spin_sleep = "1.1"
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}

[dependencies.hai_core]
path = "../core"
version = "0.1"

[dependencies.hai_js_runtime]
optional = true
path = "../js_runtime"
version = "0.1"

[dependencies.hai_pal]
path = "../platform"
version = "0.1"
