[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "An experimental game engine for building visual novels."
edition = "2021"
license = "Apache-2.0"
name = "hai"
repository = "https://github.com/Icemic/hai"
version = "0.7.0"

[package.metadata.release]
publish = false
release = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web", "text"]

desktop = [
  "hai_core/desktop",
  "hai_nodes/desktop",
  "hai_ops/desktop",
  "hai_pal/desktop",
  "hai_ops/js_runtime",
  "hai_ops/quickjs",
  "dep:tokio",
]
web = [
  "hai_core/web",
  "hai_nodes/web",
  "hai_ops/web",
  "hai_pal/web",
  "hai_ops/js_runtime",
  "dep:wasm-bindgen",
  "dep:web-sys",
]

text = ["hai_nodes/text", "hai_ops/text"]
video = ["hai_nodes/video"]

[dependencies]
log = "0.4"
spin_sleep = "1.1"
tokio = {version = "1", features = ["rt-multi-thread", "macros"], optional = true}
wasm-bindgen = {version = "0.2.83", default-features = false, optional = true}
web-sys = {version = "0.3.56", features = ["Window", "Element", "Document", "HtmlElement", "HtmlCanvasElement"], optional = true}

[dependencies.hai_core]
path = "../core"
version = "0.7"

[dependencies.hai_pal]
path = "../platform"
version = "0.7"

[dependencies.hai_nodes]
path = "../nodes"
version = "0.7"

[dependencies.hai_ops]
path = "../ops"
version = "0.7"

[dependencies.hai_audio]
path = "../audio"
version = "0.7"
