[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "An experimental game engine for building visual novels."
edition = "2021"
license = "MPL-2.0"
name = "hai"
repository = "https://github.com/Icemic/hai"
version = "0.7.0"

[package.metadata.release]
publish = false
release = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["text"]

text = ["hai_nodes/text", "hai_ops/text"]
video = ["hai_nodes/video"]

[[bin]]
name = "hai"
path = "src/main.rs"

[lib]
crate_type = ["cdylib"]
name = "hai_lib"
path = "src/hai_lib.rs"

[dependencies]
log = "0.4"
spin_sleep_util = "0.1.1"

hai_audio = {workspace = true}
hai_core = {workspace = true, features = ["js_runtime"]}
hai_macros = {workspace = true}
hai_nodes = {workspace = true}
hai_ops = {workspace = true}
hai_pal = {workspace = true}
hai_scenario = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2.83", default-features = false}
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
winit = {version = "0.29", features = ["android-game-activity"]}

[build-dependencies]
cfg_aliases = {workspace = true}
