[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Javascript runtime for Hai."
edition = "2021"
license = "Apache-2.0"
name = "hai_js_runtime"
repository = "https://github.com/Icemic/hai"
version = "0.4.0"

[dependencies]
anyhow = "1.0"
futures = "0.3"
log = "0.4"
serde_v8 = "0.81"
spin_sleep = {version = "1.1.1"}
tokio = {version = "1", features = ["full"]}
v8 = {version = "0.60"}

[dependencies.hai_pal]
path = "../platform"
version = "0.4"
