[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Essential macros for Hai."
edition = "2021"
license = "MPL-2.0"
name = "doufu_macros"
repository = "https://github.com/DeepSpaceMill/doufu"
version = "0.7.0"

[lib]
proc-macro = true

[features]
default = []
js_runtime = []

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
