[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Essential macros for Moyu."
edition = "2024"
license = "MPL-2.0"
name = "moyu_macros"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[lib]
proc-macro = true

[features]
default = []
js_runtime = []

[dependencies]
darling = "0.21"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
