[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "An experimental game engine for building visual novels."
edition = "2021"
license = "MPL-2.0"
name = "moyu"
repository = "https://github.com/Icemic/moyu"
version = "0.7.0"

[package.metadata.release]
publish = false
release = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["text"]

text = ["moyu_nodes/text", "moyu_ops/text"]
video = ["moyu_nodes/video"]

[[bin]]
name = "moyu"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
name = "libmoyu"
path = "src/lib.rs"

[dependencies]
log = "0.4"
spin_sleep_util = "0.1.1"

moyu_audio = {workspace = true}
moyu_core = {workspace = true, features = ["js_runtime"]}
moyu_gamepad = {workspace = true}
moyu_macros = {workspace = true}
moyu_nodes = {workspace = true}
moyu_ops = {workspace = true}
moyu_pal = {workspace = true}
moyu_scenario = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}

moyu_runtime = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2.83", default-features = false}
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
winit = {version = "0.29", features = ["android-game-activity"]}

[build-dependencies]
cfg_aliases = {workspace = true}
embed-resource = "3"
