[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "An experimental game engine for building visual novels."
edition = "2024"
license = "MPL-2.0"
name = "moyu"
repository = "https://github.com/Icemic/moyu"
version = "0.8.0"

[package.metadata.release]
publish = false
release = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["text"]

text = ["moyu_nodes/text", "moyu_ops/text"]
video = ["moyu_nodes/video"]

[[bin]]
name = "moyu"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
name = "libmoyu"
path = "src/lib.rs"

[dependencies]
spin_sleep_util = "0.1.1"

log = {workspace = true}

moyu_audio = {workspace = true}
moyu_core = {workspace = true, features = ["js_runtime"]}
moyu_gamepad = {workspace = true}
moyu_macros = {workspace = true}
moyu_nodes = {workspace = true}
moyu_ops = {workspace = true}
moyu_pal = {workspace = true}
moyu_resource = {workspace = true}
moyu_scenario = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1.47"

tokio = {workspace = true, features = ["rt-multi-thread", "macros", "parking_lot"]}

moyu_runtime = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}

[target.'cfg(target_os = "android")'.dependencies]
winit = {workspace = true, features = ["android-game-activity"]}

[build-dependencies]
cfg_aliases = {workspace = true}
embed-resource = "3"
