[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Extra nodes and renderers for Hai."
edition = "2021"
license = "MPL-2.0"
name = "hai_nodes"
repository = "https://github.com/Icemic/hai"
version = "0.7.0"

[features]
default = []

text = ["dep:huozi", "dep:glam"]
video = ["dep:ffmpeg-rs"]
yuv_sprite = []

[dependencies]
anyhow = "1.0"
arc-swap = "1.6"
bytemuck = {version = "1.13", features = ["derive"]}
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
wgpu = "22.0"

hai_core = {workspace = true}
hai_macros = {workspace = true}
hai_pal = {workspace = true}

# optional for features
ffmpeg-rs = {version = "5.2.1", optional = true}
glam = {version = "0.28", features = ["bytemuck"], optional = true}
huozi = {version = "0.8", optional = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hai_core = {workspace = true, features = ["js_runtime"]}

[build-dependencies]
cfg_aliases = {workspace = true}
