[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Extra nodes and renderers for Moyu."
edition = "2021"
license = "MPL-2.0"
name = "moyu_nodes"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[features]
default = []

text = ["dep:huozi", "dep:glam", "dep:csscolorparser"]
video = ["dep:ffmpeg-rs"]
yuv_sprite = []

[dependencies]
anyhow = {workspace = true}
arc-swap = {workspace = true}
bytemuck = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
wgpu = {workspace = true}

moyu_core = {workspace = true}
moyu_macros = {workspace = true}
moyu_pal = {workspace = true}
moyu_resource = {workspace = true}

# optional for features
ffmpeg-rs = {version = "5.2.1", optional = true}
huozi = {version = "0.12", optional = true}

csscolorparser = {workspace = true, optional = true}
glam = {workspace = true, optional = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moyu_core = {workspace = true, features = ["js_runtime"]}

[build-dependencies]
cfg_aliases = {workspace = true}
