[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Extra nodes and renderers for Moyu."
edition = "2024"
license = "MPL-2.0"
name = "moyu_nodes"
repository = "https://github.com/DeepSpaceMill/moyu"
version.workspace = true

[features]
default = []
text = ["dep:huozi"]

[dependencies]
reiterator = "0.3.0"
unicode-segmentation = "1.12"
weak-table = "0.3.2"

anyhow = {workspace = true}
arc-swap = {workspace = true}
bytemuck = {workspace = true}
glam = {workspace = true}
image = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
ts-rs = {workspace = true}
wgpu = {workspace = true}

moyu_core = {workspace = true}
moyu_macros = {workspace = true}
moyu_pal = {workspace = true}
moyu_resource = {workspace = true}
moyu_video = {workspace = true}

# optional for features
huozi = {workspace = true, optional = true}

csscolorparser = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moyu_core = {workspace = true, features = ["js_runtime"]}

[build-dependencies]
cfg_aliases = {workspace = true}
