[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Operations inside Javascript runtime for Hai."
edition = "2021"
license = "MPL-2.0"
name = "hai_ops"
repository = "https://github.com/Icemic/hai"
version = "0.7.0"

[features]
default = []

text = []
video = []

[dependencies]
anyhow = "1.0"
log = "0.4"

hai_core = {workspace = true}
hai_macros = {workspace = true}
hai_nodes = {workspace = true}
hai_pal = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hai_core = {workspace = true, features = ["js_runtime"]}
hai_macros = {workspace = true, features = ["js_runtime"]}
hai_runtime = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2.83", default-features = false}
wasm-bindgen-futures = "0.4.33"
web-sys = {version = "0.3.56", features = ["Window", "Element", "Document", "HtmlElement", "HtmlCanvasElement", "CustomEvent"]}

[build-dependencies]
cfg_aliases = {workspace = true}
