[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Operations inside Javascript runtime for Hai."
edition = "2021"
license = "MPL-2.0"
name = "doufu_ops"
repository = "https://github.com/DeepSpaceMill/doufu"
version = "0.7.0"

[features]
default = []

text = []
video = []

[dependencies]
anyhow = "1.0"
log = "0.4"

doufu_core = {workspace = true}
doufu_macros = {workspace = true}
doufu_nodes = {workspace = true}
doufu_pal = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
doufu_core = {workspace = true, features = ["js_runtime"]}
doufu_macros = {workspace = true, features = ["js_runtime"]}
doufu_runtime = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2.83", default-features = false}
wasm-bindgen-futures = "0.4.33"
web-sys = {version = "0.3.56", features = ["Window", "Element", "Document", "HtmlElement", "HtmlCanvasElement", "CustomEvent"]}

[build-dependencies]
cfg_aliases = {workspace = true}
