[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Operations inside Javascript runtime for Moyu."
edition = "2021"
license = "MPL-2.0"
name = "moyu_ops"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[features]
default = []

text = []
video = []

[dependencies]
anyhow = {workspace = true}
log = {workspace = true}

moyu_core = {workspace = true}
moyu_macros = {workspace = true}
moyu_nodes = {workspace = true}
moyu_pal = {workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moyu_core = {workspace = true, features = ["js_runtime"]}
moyu_macros = {workspace = true, features = ["js_runtime"]}
moyu_runtime = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}
web-sys = {workspace = true, features = [
  "Window",
  "Element",
  "Document",
  "HtmlElement",
  "HtmlCanvasElement",
  "CustomEvent",
]}

[build-dependencies]
cfg_aliases = {workspace = true}
