[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Platform abstraction layer for Moyu."
edition = "2021"
license = "MPL-2.0"
name = "moyu_pal"
repository = "https://github.com/DeepSpaceMill/moyu"
version = "0.7.0"

[dependencies]
anyhow = "1.0"
csscolorparser = {version = "0.6", features = ["serde"]}
dirs = "6.0"
ehttp = {version = "0.5", features = ["native-async"]}
log = "0.4"
once_cell = "1.16"
path-clean = "1.0.1"
pollster = "0.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
log-panics = "2"
node-resolve = "2.2"
parking_lot = {version = "0.12", features = ["hardware-lock-elision"]}
tokio = {version = "1", features = ["full"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = {version = "1.0", features = ["color"]}
parking_lot = "0.12"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3.77", features = [
  "Window",
  "Location",
  "Navigator",
  "StorageManager",
  "File",
  "FileSystemDirectoryHandle",
  "FileSystemGetDirectoryOptions",
  "FileSystemFileHandle",
  "FileSystemGetFileOptions",
  "FileSystemWritableFileStream",
  "FileSystemHandle",
  "FileSystemHandleKind",
  "FileSystemRemoveOptions",
  "DomException",
]}
web-time = "1.1"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.5.2"
android_logger = "0.14.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.61", features = [
  "Win32_System_Console",
]}

[build-dependencies]
cfg_aliases = {workspace = true}
